tests/snapshots/run_wpt_conformance__litert_sqrt_float16_5D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "sqrt.https.any.js",
    "sqrt float16 5D tensor",
    "litert",
    "PASS",
)
